@@ -14,6 +14,12 @@ java {
     }
 }
 
+// Case문 프리뷰
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += ['--enable-preview']
+    options.release = 17
+}
+
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
@@ -45,7 +51,6 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     // Jaro Winkler 유사도 계산 의존성
     implementation 'org.apache.commons:commons-text:1.11.0'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.h2database:h2'
@@ -58,6 +63,11 @@ dependencies {
     testImplementation 'com.h2database:h2'
     testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    // Querydsl 설정
+    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
+    annotationProcessor 'jakarta.persistence:jakarta.persistence-api:3.1.0'
 }
 
 tasks.named('test') {
@@ -110,6 +120,18 @@ afterEvaluate {
                     minimum = 0.80 // 라인 커버리지 최소 비율을 80%로 설정
                 }
             }
+        }
+    }
+}
+
+// Q객체 생성 위치 경로 지정
+def querydslDir = layout.buildDirectory.dir("generated/querydsl").get().asFile
+
+sourceSets {
+    main {
+        java {
+            srcDir querydslDir
+            srcDir 'build/generated/sources/annotationProcessor/java/main'
         }
     }
 }
